Added my works gallery portfolio page and made some changes in about page

--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="about.css">
@@ -27,8 +26,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
@@ -89,48 +87,76 @@
     <div class="jumbotron" id="ResumeContainer1">
 
         <div id="picDiv"><img src="dp.png"></div>
-        <div id="aboutContact"><i class="fa fa-envelope-open" aria-hidden="true"></i> yogidesina2@gmail.com<br />
-            <i class="fa fa-mobile" aria-hidden="true"></i> 9440855552<br /><i class="fa fa-globe"
-                aria-hidden="true"></i> yogadurganath.github.io
+        <div id="aboutContact"><i class="fa fa-envelope-open" aria-hidden="true"></i> <a href="mailto:yogidesina2@gmail.com">yogidesina2@gmail.com</a><br />
+            <!-- <i class="fa fa-mobile" aria-hidden="true"></i> 9440855552<br /> -->
+            <i class="fa fa-globe" aria-hidden="true"></i>
+            <a href="http://yogadurganath.github.io">yogadurganath.github.io</a>
         </div>
 
         <div class="jumbotron" id="cont1"></div>
     </div>
     <div class="container" id="ResumeContainer2">
         <h5>Career objective</h5>
-        <h6>Seeking a position to utilize my skills and abilities in the software industry that offers professional
-            growth while being resourceful and innovative.</h6>
+        <h6>Seeking a position to utilize my skills and abilities in the software industry that offers professional growth while being resourceful and innovative.</h6>
+    </div>
+    <div class="container" id="ResumeContainer3">
+        <h5>Skill-Set</h5>
+        <table class="table table-borderless table-responsive skilltcol">
+            <tbody>
+                <tr>
+                    <td>Languages</td>
+                    <td>C, C++, Python, HTML, CSS, PHP.</td>
+
+                </tr>
+                <tr>
+                    <td>Frameworks/Libraries</td>
+                    <td>React JS, Node JS, Express JS.</td>
+                </tr>
+            </tbody>
+            <tr>
+                <td>Scripting Languages</td>
+                <td>JAVASCRIPT, jQuery</td>
+            </tr>
+            <tr>
+                <td>Database</td>
+                <td>MySQL, MongoDB.</td>
+            </tr>
+            <tr>
+                <td>UI designing tools</td>
+                <td>Adobe Photoshop, Adobe XD.</td>
+            </tr>
+            <tr>
+                <td>Operating Systems</td>
+                <td>Windows XP/7/8/10, MS-DOS, Ubuntu.</td>
+            </tr>
+        </table>
+
     </div>
     <!-- <div class="container" id="ResumeContainer3">
         <h5>Skill-Set</h5>
 
         <h6>Java</h6>
         <div class="progress">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
-                aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <h6>Java</h6>
         <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
-                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <h6>Java</h6>
         <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
-                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <h6>Java</h6>
         <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
-                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <h6>Java</h6>
         <div class="progress">
-            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
-                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
 
-    </div> -->
+        </div> -->
     <div class="container" id="ResumeContainer4">
         <h5>Education</h5>
         <div class="table-responsive">
@@ -181,14 +207,8 @@
             <b>Duration : </b>Jan 2018 – May 2018<br />
             <b>Environment : </b>HTML, CSS, JS, JQuery with Framework7, PhoneGap<br />
             <b> Operating System: </b>Works in Android, IOS, Windows<br />
-            <b> Description:</b>
-            Hybrid platform mobile applications help in cost cutting and saving time as well as providing components
-            for
-            easier development of applications which provide a native feel to the user. This application aims to
-            help
-            developers make the right choice in order to build an application as well as give vital information
-            about
-            hybrid platform mobile application approaches.
+            <b> Description:</b> Hybrid platform mobile applications help in cost cutting and saving time as well as providing components for easier development of applications which provide a native feel to the user. This application aims to help developers
+            make the right choice in order to build an application as well as give vital information about hybrid platform mobile application approaches.
         </h6>
     </div>
 
@@ -198,12 +218,12 @@
 
     <div class="container" id="ResumeContainer6">
         <h5> Bio </h5>
-        <h6>DESINA YOGA DURGANATH<BR />
-            08-OCT-1997<BR />
-            MALE<br />
-            SINGLE<br />
-            INDIAN<br />
-            Cooking, Playing badminton, Reading articles.<br />Chennai
+        <h6>DESINA YOGA DURGANATH
+            <BR /> 08-OCT-1997
+            <BR /> MALE
+            <br /> SINGLE
+            <br /> INDIAN
+            <br /> Cooking, Playing badminton, Reading articles.<br />Chennai
         </h6>
 
 
@@ -214,32 +234,27 @@
         <div class="container">
             <ul class="list-inline mb-5">
                 <li class="list-inline-item">
-                    <a title="Facebook" class="social-link rounded-circle text-white mr-3"
-                        href="https://www.facebook.com/yogidesina" target="_blank">
+                    <a title="Facebook" class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/yogidesina" target="_blank">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Twitter" class="social-link rounded-circle text-white mr-3"
-                        href="https://twitter.com/YogaDurgaNath" target="_blank">
+                    <a title="Twitter" class="social-link rounded-circle text-white mr-3" href="https://twitter.com/YogaDurgaNath" target="_blank">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Github" class="social-link rounded-circle text-white mr-3"
-                        href="https://github.com/yogadurganath/" target="_blank">
+                    <a title="Github" class="social-link rounded-circle text-white mr-3" href="https://github.com/yogadurganath/" target="_blank">
                         <i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Instagram" class="social-link rounded-circle text-white mr-3"
-                        href="https://www.instagram.com/yogidesina/" target="_blank">
+                    <a title="Instagram" class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/yogidesina/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="LinkedIn" class="social-link rounded-circle text-white"
-                        href="https://in.linkedin.com/in/yoga-durga-nath-688a7b141" target="_blank">
+                    <a title="LinkedIn" class="social-link rounded-circle text-white" href="https://in.linkedin.com/in/yoga-durga-nath-688a7b141" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -253,15 +268,11 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+
+</html>
 
 </html>
