--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -28,8 +27,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
@@ -87,24 +85,24 @@
             </ul>
         </div>
     </nav>
-<div class="cont-bg">     
-    
-    <div id="contactbox">
-        <div id="logo">
-            <p>Contact<span>form</span></p>
-        </div>
-        <div id="continput">
-            <div id="input-group">
-                <form class="form" id="contactForm" role="form" autocomplete="off"
-                        action="https://smartforms.dev/submit/5eb86c5d8a02626591cb5ada" method="POST">
+    <div class="cont-bg">
+
+        <div id="contactbox">
+            <div id="logo">
+                <p>Contact<span>form</span></p>
+            </div>
+            <div id="continput">
+                <div id="input-group">
+                    <form class="form" id="contactForm" role="form" autocomplete="off" action="https://smartforms.dev/submit/5eb86c5d8a02626591cb5ada" method="POST">
                         <fieldset>
-                            <label for="nameCF" class="mb-0">Name</label>
+                            <label><p>Required fields (<span class="error">*</span>)</p></label><br/>
+                            <label for="nameCF" class="mb-0">Name<span class="error">*</span></label>
                             <div class="row mb-1">
                                 <div class="col-lg-12">
                                     <input type="text" name="name" id="nameCF" class="form-control" required="">
                                 </div>
                             </div>
-                            <label for="emailCF" class="mb-0">Email</label>
+                            <label for="emailCF" class="mb-0">Email<span class="error">*</span></label>
                             <div class="row mb-1">
                                 <div class="col-lg-12">
                                     <input type="email" name="email" id="cemail" class="form-control" required="">
@@ -116,59 +114,52 @@
                                     <input type="text" name="company" id="companyCF" class="form-control">
                                 </div>
                             </div>
-                            <label for="reasonCF" class="mb-0">Reason for Reaching Out.</label>
+                            <label for="reasonCF" class="mb-0">Reason for Reaching Out.<span class="error">*</span></label>
                             <div class="row mb-1">
                                 <div class="col-lg-12">
-                                    <textarea rows="6" name="reason" id="reasonCF" class="form-control"
-                                        required=""></textarea>
+                                    <textarea rows="6" name="reason" id="reasonCF" class="form-control" required=""></textarea>
                                 </div>
                             </div>
-                            <label for="messageCF" class="mb-0">Message</label>
+                            <label for="messageCF" class="mb-0">Message<span class="error">*</span></label>
                             <div class="row mb-1">
                                 <div class="col-lg-12">
-                                    <textarea rows="6" name="message" id="messageCF" class="form-control"
-                                        required=""></textarea>
+                                    <textarea rows="6" name="message" id="messageCF" class="form-control" required=""></textarea>
                                 </div>
                             </div>
                             <button class="btn btn-primary" type="submit">Send Message</button>
                         </fieldset>
                     </form>
+                </div>
             </div>
         </div>
+
     </div>
-         
-</div>
 
     <footer class="footer text-center">
         <div class="container">
             <ul class="list-inline mb-5">
                 <li class="list-inline-item">
-                    <a title="Facebook" class="social-link rounded-circle text-white mr-3"
-                        href="https://www.facebook.com/yogidesina" target="_blank">
+                    <a title="Facebook" class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/yogidesina" target="_blank">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Twitter" class="social-link rounded-circle text-white mr-3"
-                        href="https://twitter.com/YogaDurgaNath" target="_blank">
+                    <a title="Twitter" class="social-link rounded-circle text-white mr-3" href="https://twitter.com/YogaDurgaNath" target="_blank">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Github" class="social-link rounded-circle text-white mr-3"
-                        href="https://github.com/yogadurganath/" target="_blank">
+                    <a title="Github" class="social-link rounded-circle text-white mr-3" href="https://github.com/yogadurganath/" target="_blank">
                         <i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Instagram" class="social-link rounded-circle text-white mr-3"
-                        href="https://www.instagram.com/yogidesina/" target="_blank">
+                    <a title="Instagram" class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/yogidesina/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="LinkedIn" class="social-link rounded-circle text-white"
-                        href="https://in.linkedin.com/in/yoga-durga-nath-688a7b141" target="_blank">
+                    <a title="LinkedIn" class="social-link rounded-circle text-white" href="https://in.linkedin.com/in/yoga-durga-nath-688a7b141" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -183,15 +174,9 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <!-- <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.2.0/dist/bootstrap-validate.js" ></script> -->
     <script>
@@ -201,7 +186,6 @@
         // bootstrapValidate('#messageCF', 'required:Please fill out this field!')
 
         $("#contactForm").validate();
-
     </script>
 </body>
 
