--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="gallery-grid.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="portfolio.css">
@@ -144,68 +144,189 @@
 
         <h3 class="text-center my-3">Graphics Design Works</h3>
         <div class="row mx-5">
-            <div class="col-sm"><a href="#">Workshops/Events</a></div>
-            <div class="col-sm"><a href="#">Wall posters</a></div>
-            <div class="col-sm"><a href="#">Logos</a></div>
-            <div class="col-sm"><a href="#">Visiting cards</a></div>
+            <div class="col-sm"><a href="#vstcds">Visiting cards</a></div>
+            <div class="col-sm"><a href="#wrkshp">Workshops/Events</a></div>
+            <div class="col-sm"><a href="#wlps">Wall posters</a></div>
+            <div class="col-sm"><a href="#looogos">Logos</a></div>
+
         </div>
 
-
-
-        <p class="page-description text-center">Workshops</p>
-
-
+        <p class="page-description text-center" id="vstcds">Visiting cards</p>
+        <p class="gallery_title ml-5">Nutz n bolts <span class="event_details">&nbsp; Mechanical dept. synposium</span></p>
         <div class="tz-gallery">
 
             <div class="row">
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/park.jpg">
-                        <img src="../images/park.jpg" alt="Park">
+
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/VisitingCards/SriRamaCatering.jpg">
+                        <img src="img/GraphicsDesignGallery/VisitingCards/Thumb/sriramacatering.jpg" alt="Sri Rama Catering">
+                        <p class="mt-n4">Sri Rama Catering</p>
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/bridge.jpg">
-                        <img src="../images/bridge.jpg" alt="Bridge">
+                <div class="gallery_img landscape col-sm-6 col-md-4 my-auto">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/VisitingCards/S4back.jpg">
+                        <img src="img/GraphicsDesignGallery/VisitingCards/Thumb/S4back.jpg" alt="S4 Interiors">
+                        <p class="mt-n4">S4 Interiors</p>
                     </a>
                 </div>
-                <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="../images/tunnel.jpg">
-                        <img src="../images/tunnel.jpg" alt="Tunnel">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/coast.jpg">
-                        <img src="../images/coast.jpg" alt="Coast">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/rails.jpg">
-                        <img src="../images/rails.jpg" alt="Rails">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/traffic.jpg">
-                        <img src="../images/traffic.jpg" alt="Traffic">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/rocks.jpg">
-                        <img src="../images/rocks.jpg" alt="Rocks">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/benches.jpg">
-                        <img src="../images/benches.jpg" alt="Benches">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="../images/sky.jpg">
-                        <img src="../images/sky.jpg" alt="Sky">
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/VisitingCards/S4front.jpg">
+                        <img src="img/GraphicsDesignGallery/VisitingCards/Thumb/S4front.jpg" alt="S4 Interiors back">
+                        <p class="mt-n4">S4 Interiors backside</p>
                     </a>
                 </div>
             </div>
 
         </div>
+
+        <p class="page-description text-center" id="wrkshp">Workshops</p>
+        <p class="gallery_title ml-5">Nutz n bolts <span class="event_details">&nbsp; Mechanical dept. synposium</span></p>
+        <div class="tz-gallery">
+
+            <div class="row">
+
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/Poster.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tPoster.jpg" alt="Poster">
+                        <p class="mt-n4">Poster</p>
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4 my-auto">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/plaCard4hanging.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tplaCard4hanging.jpg" alt="Placards">
+                        <p class="mt-n4">Pla-Card</p>
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/foodToken.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tfoodToken.jpg" alt="FoodToken">
+                        <p class="mt-n4">Food Token</p>
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/VolunteerIDcard.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tVolunteerIDcard.jpg" alt="VolunteerIDcard">
+                        <p class="mt-n4">Volunteer IDcard</p>
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/Co-ordinatorID.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tCo-ordinatorID.jpg" alt="Co-ordinatorID">
+                        <p class="mt-n4">Co-ordinator IDcard</p>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+        <p class="page-description text-center" id="wlps">Wall posters</p>
+        <p class="gallery_title ml-5">Cyber Security and Networking<span class="event_details">&nbsp; Lab Posters</span></p>
+        <div class="tz-gallery">
+
+            <div class="row">
+
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/df1.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/df1.jpg" alt="Cyber Security 1">
+
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4 my-auto">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/df2.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/df2.jpg" alt="Cyber Security 2">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/df3.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/df3.jpg" alt="Cyber Security 3">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/df4.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/df4.jpg" alt="Cyber Security 4">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/df5.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/df5.jpg" alt="Cyber Security 5">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/df6.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/df6.jpg" alt="Cyber Security 6">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/net1.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/net1.jpg" alt="Networking Lab 1">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/net2.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/net2.jpg" alt="Networking Lab 2">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/net3.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/net3.jpg" alt="Networking Lab 3">
+
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Wallposters/CSE lab posters/net4.jpg">
+                        <img src="img/GraphicsDesignGallery/Wallposters/CSE lab posters/Thumb/net4.jpg" alt="Networking Lab 4">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+        <p class="page-description text-center" id="looogos">Logos</p>
+        <p class="gallery_title ml-5">Nutz n bolts <span class="event_details">Mechanical dept. synposium</span></p>
+        <div class="tz-gallery">
+
+            <div class="row">
+
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/Poster.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tPoster.jpg" alt="Poster">
+                        <p class="mt-n4">Poster</p>
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4 my-auto">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/plaCard4hanging.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tplaCard4hanging.jpg" alt="Placards">
+                        <p class="mt-n4">Pla-Card</p>
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/foodToken.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tfoodToken.jpg" alt="FoodToken">
+                        <p class="mt-n4">Food Token</p>
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/VolunteerIDcard.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tVolunteerIDcard.jpg" alt="VolunteerIDcard">
+                        <p class="mt-n4">Volunteer IDcard</p>
+                    </a>
+                </div>
+                <div class="gallery_img portrait col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/Co-ordinatorID.jpg">
+                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tCo-ordinatorID.jpg" alt="Co-ordinatorID">
+                        <p class="mt-n4">Co-ordinator IDcard</p>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
 
     </div>
 
